6 de octubre 4:10pm

--- a/capitulos/capitulo1.tex
+++ b/capitulos/capitulo1.tex
@@ -9,7 +9,7 @@
     
     \section{Internet de las Cosas en museos internacionales}\label{sec:iotMundo}
         
-        Hoy en día existen museos líderes en el tema de interacción con el público, como es el caso de los museos Digital Art Museum TeamLab Borderless de Japón y el Atelier de Lumieres de Francia. El primero de estos es un espacio que posee 10 mil metros cuadrados de proyección 3D, acompañados de juegos de luces y efectos especiales que llevan a los visitantes en medio de paisajes surrealistas. El segundo museo realiza macro proyecciones 360° de las obras más importantes de artistas como Van Gogh, Picasso, Chagall, entre otros. \cite{museoInterSalaLimpia}.\\
+        En la actualidad existen museos líderes en el tema de interacción con el público, como es el caso de los museos Digital Art Museum TeamLab Borderless de Japón y el Atelier de Lumieres de Francia. El primero de estos es un espacio que posee 10 mil metros cuadrados de proyección 3D, acompañados de juegos de luces y efectos especiales que llevan a los visitantes en medio de paisajes surrealistas. El segundo museo realiza macro proyecciones 360° de las obras más importantes de artistas como Van Gogh, Picasso, Chagall, entre otros. \cite{museoInterSalaLimpia}.\\
 
         En Maloka \footnote{Maloka es un museo interactivo que fomenta la pasión por el aprendizaje a partir de los lazos entre ciencia, tecnología, innovación y sociedad.}, Bogotá, las exhibiciones ponen a prueba los 5 sentidos de los visitantes, haciendo que tanto niños, como adultos disfruten un tiempo en familia repleto de nuevos conocimientos, incluyendo recorridos por salas interactivas y funciones de proyección de cine. \cite{maloka}.
 
@@ -19,7 +19,7 @@
 
         En la Universidad de El Cairo, Egipto, desarrollaron un sistema para la conservación de las piezas en los museos, un sistema que no solo mide los atributos del entorno, sino que también mantiene la seguridad de los artefactos al detectar cualquier prueba de contacto o movimiento. También controla la intensidad de la luz en función de la ocupación de la sección del museo. Una característica diferenciadora del sistema es el diseño de energía ultrabaja de su nodo sensor que conduce a una larga vida útil de hasta 50 días. \cite{ultraLowPowerConservacion}.
         
-        Existen otros proyectos de utilización del Iot en museos, tal es el caso del proyecto propuesto en el III Congreso Internacional de Avances en Electricidad, Electrónica, Información, Comunicación y Bioinformática en el año 2017. El proyecto consiste en el montaje de un sistema que se basa en un dispositivo portátil que captura el movimiento del usuario, realiza el algoritmo de sustracción de fondo para realizar el procesamiento de imágenes y obtiene la información de localización de un Bluetooth Low Energy (BLE).\cite{proyectoIotdispositivoPortatil}. En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things (IoT), que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID (identificación por radiofrecuencia del inglés Radio Frequency Identification) pasivos. \cite{chinaSistemaSeguridadRFID}.
+        Existen otros proyectos de utilización del IoT en museos, tal es el caso del proyecto propuesto en el III Congreso Internacional de Avances en Electricidad, Electrónica, Información, Comunicación y Bioinformática en el año 2017. El proyecto consiste en el montaje de un sistema que se basa en un dispositivo portátil que captura el movimiento del usuario, realiza el algoritmo de sustracción de fondo para realizar el procesamiento de imágenes y obtiene la información de localización de un Bluetooth Low Energy (BLE).\cite{proyectoIotdispositivoPortatil}. En agosto del 2019, entre la Escuela de Ingeniería Electrónica, Universidad de Jiujiang y la Escuela de Ciencias de la Computación, Universidad de Wuhan, ambas de China elaboraron un artículo donde propusieron un esquema antirrobo para museos basado en la tecnología Internet of Things, que identifica si las reliquias culturales están dentro del rango seguro a través de lectores/escritores RFID (identificación por radiofrecuencia del inglés Radio Frequency Identification) pasivos \cite{chinaSistemaSeguridadRFID}.
 
         La siguiente tabla resume lo anterior expuesto.
 
@@ -55,17 +55,17 @@
             \label{tab:iotInternacional}
         \end{table}
                 
-    Como se observa en la tabla \ref{tab:iotInternacional1} existen disímiles ejemplos de aplicación del Internet de las Cosas a nivel internacional; de ahí que haremos énfasis en la aplicación de sistemas de conservación de las piezas en los museos tomando como referencia los ejemplos anteriormente expuestos.
+    Como se observa en la tabla \ref{tab:iotInternacional1} existen disímiles ejemplos de aplicación del Internet de las Cosas a nivel internacional; de ahí que se enfatizará en la aplicación de sistemas de conservación de las piezas en los museos tomando como referencia los ejemplos anteriormente expuestos.
 
     \section{Internet de las Cosas en Cuba}\label{sec:iotCuba} 
 
-    En Cuba existen escasos ejemplos de la aplicación del Internet de las Cosas en los museos, no obstante, dentro de esos pocos se encuentra el Palacio del Segundo Cabo.\\
+    En Cuba existen escasos ejemplos de la aplicación del Internet de las Cosas en los museos, dentro de ellos se encuentra el Palacio del Segundo Cabo.\\
         
-    Desde 2012 se venía proyectando una sala dedicada al libro cubano, con la cooperación de la Unión Europea y la Unesco. \cite{oficinaHistoriadorRescatepatrimonio}. Gracias a este Rescate Patrimonial y Desarrollo Cultural en La Habana, se propició la restauración del mismo para la creación del Centro. Esta iniciativa de cooperación internacional fue desarrollada por la Oficina del Historiador de la Ciudad de La Habana, con apoyo de la Unión Europea y de la Organización de Naciones Unidas para la Educación, la Ciencia y la Cultura (UNESCO). \cite{potencialidadProyectoMuseologico}.\\
+    Desde 2012 se venía proyectando una sala dedicada al libro cubano, con la cooperación de la Unión Europea y la UNESCO. \cite{oficinaHistoriadorRescatepatrimonio}. Gracias a este Rescate Patrimonial y Desarrollo Cultural en La Habana, se propició la restauración del mismo para la creación del centro. Esta iniciativa de cooperación internacional fue desarrollada por la Oficina del Historiador de la Ciudad de La Habana, con apoyo de la UNESCO \cite{potencialidadProyectoMuseologico}.\\
         
-    El Centro cuenta con una sala monográfica que propone un audiovisual realizado por autores cubanos donde se relata la historia del inmueble donde está ubicada la institución. Además, de una sala introductoria que refleja la visión que se tenía antes del encuentro de las dos culturas con la llegada de Cristóbal Colón. Este relata en paralelo la historia de Cuba y de Europa interrelacionadas en un ambiente inmersivo y por fuera se puede recorrer desde la visión de las artes plásticas europeas y cubanas. Siempre están acompañados de cuatro audiovisuales que recorren líneas independientes como la historia de la esclavitud, la ciencia, los servicios públicos y la economía.\\
+    El centro cuenta con una sala monográfica que propone un audiovisual realizado por autores cubanos donde se relata la historia del inmueble donde está ubicada la institución. Además de una sala introductoria que refleja la visión que se tenía antes del encuentro de las dos culturas con la llegada de Cristóbal Colón. Este relata en paralelo la historia de Cuba y de Europa interrelacionadas en un ambiente inmersivo y por fuera se puede recorrer desde la visión de las artes plásticas europeas y cubanas. Siempre están acompañados de cuatro audiovisuales que recorren líneas independientes como la historia de la esclavitud, la ciencia, los servicios públicos y la economía.\\
         
-    Adosada a esta sala se encuentra la de llegada y migraciones donde en un espacio se reproduce una parte de un galeón, atractivo para el público pues puede sentirse una ligera «brisa de mar», una corriente de aire situada en la parte posterior del barco. Esto se complementa con dos pantallas y proyectores que permiten la visualización de un audiovisual que también habla de las llegadas de los aborígenes, los conquistadores; la migración forzada de los africanos y así sucesivamente con las diferentes olas migratorias que han formado la actual característica mestiza de nuestra identidad y nación.\\
+    Adosada a esta sala se encuentra la de llegada y migraciones donde en un espacio se reproduce una parte de un galeón, atractivo para el público pues puede sentirse una ligera «brisa de mar», una corriente de aire situada en la parte posterior del barco. Esto se complementa con dos pantallas y proyectores que permiten la proyección de un audiovisual que también narra la llegada de los aborígenes, los conquistadores; la migración forzada de los africanos y así sucesivamente con las diferentes olas migratorias que han formado la actual característica mestiza de nuestra identidad y nación.\\
         
     La Sala de Viajeros se soporta en un software que despliega una galería de imágenes ya sea de cubanos relevantes de visita por Europa o de europeos de visita en Cuba. Mediante el uso de pantallas táctiles, el visitante puede interactuar con las imágenes de las personalidades, leer una síntesis biográfica e incluso escuchar muestras de audio.
     
@@ -84,7 +84,7 @@
         \label{imag:comparacionArquitecturas}
     \end{figure}
 
-    En la figura \ref{imag:comparacionArquitecturas} se desarrolla una comparación entre las arquitecturas de 3 capas, 5 capas y la arquitectura niebla.\\\\
+    En la figura \ref{imag:comparacionArquitecturas} se desarrolla una comparación entre las arquitecturas de 3 capas, 5 capas y la arquitectura niebla.\\
 
     Según \cite{capasIoTciberseguridad}, la mayoría de estas arquitecturas de IoT se basan en fundamentos básicos:
     \begin{itemize}
@@ -94,11 +94,11 @@
         \item Aplicaciones de usuario final.
     \end{itemize}
 
-    Existen varias arquitecturas, marcos de referencia o modelos conceptuales para IoT propuestos por organizaciones, comunidad académica y el sector empresarial. Las propuestas de arquitecturas pueden variar de autor en autor, en dependencia de la estructura del sistema IoT propuesto. Dichas arquitecturas son desarrolladas por capas en las que se agrupan los objetos, dispositivos, sensores, actuadores, entre otros. \cite{internetOfThingsStateOfTheArt} \cite{capasIoTciberseguridad}.\\
+    Existen varias arquitecturas, marcos de referencia o modelos conceptuales para IoT propuestos por organizaciones, comunidad académica y el sector empresarial. Las propuestas de arquitecturas pueden variar de autor en autor, en dependencia de la estructura del sistema IoT propuesto. Dichas arquitecturas son desarrolladas por capas en las que se agrupan los objetos, dispositivos, sensores, actuadores, entre otros. \cite{internetOfThingsStateOfTheArt} \cite{capasIoTciberseguridad}.
 
-    En la figura \ref{imag:modelos_arquitecturas_iot} se presenta una comparativa de algunos modelos basados en capas.\\
+    \newpage
 
-    \vspace{5cm}
+    En la figura \ref{imag:modelos_arquitecturas_iot} se presenta una comparativa de algunos modelos basados en capas.
 
     \begin{figure}[H]
         \centering
@@ -126,7 +126,7 @@
         \label{tab: referencias_capas}
     \end{table}
 
-    \vspace{1cm}
+    \newpage
 
     Desde el punto de vista de \cite{capasIoTciberseguridad} existen capas fundamentales dentro de la esctructura de IoT. En la tabla \ref{tab: capas_IoT} se detallan estas capas:
     \begin{table}[H]
@@ -165,7 +165,9 @@
 
     \subsection{Propuesta de la Arquitectura IoT del Sistema}
 
-    En base de los es quemas de arquitecturas propuestas, definimos el uso de la arquitectura del proyecto la cual se cimienta en la estructura de cuatro capas, considerando las diferentes capas.\\
+    En base de los es quemas de arquitecturas propuestas, definimos el uso de la arquitectura del proyecto la cual se cimienta en la estructura de cuatro capas, considerando las diferentes capas.
+
+    \newpage
     
     \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.1.1\hspace{5mm}Vista funcional}
         \textbf{1.3.1.1\hspace{5mm}Vista funcional}
@@ -195,14 +197,14 @@
         \label{imag:vista_implementacion_arquitectura_iot}
     \end{figure}
 
-    El alcance de este trabajo va dirigido a la explicación detallada de la capa de percepción, enfocándonos en las características del microcontrolador y sensores a emplear, así como la capa de transporte donde se hace un análisis de los métodos y protocolos de comunicación empleados en el sistema.
+    El alcance de este trabajo va dirigido a la explicación detallada de la capa de percepción, enfocándose en las características del microcontrolador y sensores a emplear, así como la capa de transporte donde se hace un análisis de los métodos y protocolos de comunicación empleados en el sistema.
 
     \subsection{Capa de percepción}\label{subsec:capa_percepcion}
     En esta capa es donde se ubican los microcontroladores encargados de comunicarse con los sensores interactuando directamente con el medio recolectando los datos.\\
     
     \begin{figure}[H]
         \centering
-        \includegraphics[width=10cm, height=5cm]{imagenes/perception_image.jpg}
+        \includegraphics[width=8.5cm, height=4cm]{imagenes/perception_image.jpg}
         \caption{Diagrama funcional de captura de datos}
         \subcaption*{Fuente: Elaboración propia}
         \label{imag:capa_percepcion}
@@ -211,16 +213,14 @@
     Como se puede observar en la figura \ref{imag:capa_percepcion}, en esta capa se encuentran implícitos una sucesión de sensores y un microcontrolador, juntos componen la estructura general de los nodos que serán incorporados a las salas pertenecientes a la exposición.\\
 
 
-    La muestra Prat está distribuida de tal modo que las piezas están ubicadas en tres salas expositivas. Enumerándolas: sala 1, sala 2 y sala 3.\\
-    La sala 1 (Exposición permanente) está caracterizada por la presencia de varios objetos distribuidos en vitrinas, sobre mesas, colgados, en estantes empotrados en la pared, o en pedestales. Se observan varios objetos de cerámica, marfil, metal, piedra, madera etcétera.\newline
+    La muestra Francisco Prat Puig está distribuida de tal modo que las piezas están ubicadas en tres salas expositivas. Enumerándolas: sala 1, sala 2 y sala 3.\\
+    La sala 1 (Exposición permanente) está caracterizada por la presencia de varios objetos distribuidos en vitrinas, sobre mesas, colgados, en estantes empotrados en la pared, o en pedestales. Se observan varios objetos de cerámica, marfil, metal, piedra, madera, etcétera.\newline
     [Imagen de la sala 1]\newline
-    En la sala 2 solamente se encuentran pinturas pertenecientes a la colección, éstas poseen también condiciones de deterioro notables por el efecto de la humedad y del nivel de luz dentro del local. La humedad provoca la aparición de hongos en el lienzo deteriorándolo y dañando también el color.\newline
+    En la sala 2 solamente se encuentran pinturas pertenecientes a la colección, estas poseen también condiciones de deterioro notables por el efecto de la humedad y del nivel de luz dentro del local. La humedad provoca la aparición de hongos en el lienzo lo que provoca su deterioro y la pérdida de color.\newline
     [Imagen de la sala 2]\newline
     [Imagen de uno de los cuadros donde se vea el hongo] (Nombre || Fuente).\newline
     Dentro de la sala 3 se localizan también varios objetos ubicados en pedestales mostrando colecciones de medallas y objetos personales del mismo Prat Puig y, además, vitrinas donde se hallan, principalmente, objetos de cerámica como platos, jarrones y cántaros.\newline
     [Imagen sala 3]\newline
-
-    \vspace{8cm}
 
     En el gráfico que se muestra a continuación se relaciona el valor cuantitativo de las principales formas en las que se exponen las piezas dentro de estas salas:\newline
 
@@ -232,17 +232,7 @@
         \label{imag:ubicacion_piezas}
     \end{figure}
 
-    Según la figura \ref{imag:ubicacion_piezas}, varios objetos están dispuestos dentro de vitrinas donde existe un microclima\footnote{microclima: según el diccionario Oxford, es el conjunto de las condiciones climáticas particulares de un lugar determinado, resultado de una modificación más o menos acusada y puntual del clima de la zona en que se encuentra influido por diferentes factores ecológicos y medioambientales.}, por lo que la condición ambiental en estas es diferente a la del local en general, de ahí la necesidad de incorporar nodos de tal manera que se tomen los datos dentro de estas vitrinas por separado y además un nodo general para el caso de las piezas que se encuentran fuera.\\
-
-    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.3.1\hspace{5mm}Nodos}
-        \textbf{1.3.3.1\hspace{5mm}Nodos}
-
-    Los nodos que, de manera general, recopilarán los datos de cada sala, estarán compuestos por los sensores que permitan medir los valores de temperatura, humedad, polución, CO2, vibraciones y luminosidad mientras que, en el caso de los nodos dentro de las vitrinas, se tiene en cuenta las condiciones del microclima y el material de los objetos.\\
-    ...\\\\\\\\
-
-    \vspace{3cm}
-
-    La siguiente tabla relaciona la variable a medir según la ubicación del nodo.
+    Según la figura \ref{imag:ubicacion_piezas}, varios objetos están dispuestos dentro de vitrinas donde existe un microclima\footnote{microclima: según el diccionario Oxford, es el conjunto de las condiciones climáticas particulares de un lugar determinado, resultado de una modificación más o menos acusada y puntual del clima de la zona en que se encuentra influido por diferentes factores ecológicos y medioambientales.}, por lo que la condición ambiental en estas es diferente a la del local en general, de ahí la necesidad de incorporar nodos de tal manera que se tomen los datos dentro de estas vitrinas por separado y además un nodo para el local en general.
 
     \begin{table}[H]
         \centering
@@ -270,12 +260,22 @@
         \label{tab:correlacion_nodos}
     \end{table}
 
+    \newpage
+
+    \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.3.1\hspace{5mm}Nodos}
+        \textbf{1.3.3.1\hspace{5mm}Nodos}
+
+    Los nodos que, de manera general, recopilarán los datos de cada sala, estarán compuestos por los sensores que permitan medir los valores de temperatura, humedad, polución, CO2, vibraciones y luminosidad mientras que, en el caso de los nodos dentro de las vitrinas, se tiene en cuenta las condiciones del microclima y el material de los objetos.\\
+    ...
+
+    En la tabla \ref{tab:correlacion_nodos} se relaciona la variable a medir según la ubicación del nodo.
+
     \subsection{Capa de transporte}\label{subsec:capa_transporte}
 
     Esta es la capa responsable del traslado de la data a través de los demás componentes del sistema estableciendo la comunicación necesaria desde la toma de valores ambientales hasta su análisis y muestreo.    
     Según \cite{internetOfThingsStateOfTheArt}, la capa de transporte es la que se encarga de transportar y transmitir los datos, recopilados de la capa de percepción, hacia la cloud. Se localizan componentes de red (switch, router, Gateway, etc.), medios de comunicación y protocolos. También es responsable de aspectos de seguridad y el control de ataques.
     
-    Los datos se promueven a través de protocolos MQTT, HTTP y TCP/IP.\\\\
+    Los datos se promueven a través de protocolos MQTT, HTTP y TCP/IP.\newline
     
     \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.4.1\hspace{5mm}Protocolo MQTT}
         \textbf{1.3.4.1\hspace{5mm}Protocolo MQTT}
@@ -284,10 +284,14 @@
     MQTT fue creado por el Dr. Andy Stanford-Clark de IBM y Arlen Nipper de Arcom (ahora Eurotech) en 1999 como un mecanismo para conectar dispositivos empleados en la industria petrolera.
     Aunque inicialmente era un formato propietario, en 2010 fue liberado y pasó a ser un estándar en 2014 según la OASIS (Organization for the Advancement of Structured Information Standards). \cite{mqtt}\\
 
+    \newpage
+
     \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.4.2\hspace{5mm}Protocolo HTTP}
         \textbf{1.3.4.2\hspace{5mm}Protocolo HTTP}
 
-    HTTP de sus siglas en inglés: “Hypertext Transfer Protocol”, es el nombre de un protocolo el cual nos permite realizar una petición de datos y recursos, como pueden ser documentos HTML. Es la base de cualquier intercambio de datos en la Web, y un protocolo de estructura cliente-servidor, esto quiere decir que una petición de datos es iniciada por el elemento que recibirá los datos (el cliente), normalmente un navegador Web. Así, una página Web completa resulta de la unión de distintos sub-documentos recibidos, como, por ejemplo: un documento que especifique el estilo de maquetación de la página Web (CSS), el texto, las imágenes, videos, scrips, etcétera.
+    HTTP de sus siglas en inglés: “Hypertext Transfer Protocol”, es el nombre de un protocolo el cual nos permite realizar una petición de datos y recursos, como pueden ser documentos HTML. Es la base de cualquier intercambio de datos en la Web, y un protocolo de estructura cliente-servidor, esto quiere decir que una petición de datos es iniciada por el elemento que recibirá los datos (el cliente), normalmente un navegador Web. Así, una página Web completa resulta de la unión de distintos sub-documentos recibidos, por ejemplo: un documento que especifique el estilo de maquetación de la página Web (CSS), el texto, las imágenes, videos, scrips, etcétera.
+
+    \newpage
 
     \addcontentsline{toc}{subsection}{\hspace{1.3cm}1.3.4.3\hspace{5mm}Protocolo TCP/IP}
         \textbf{1.3.4.3\hspace{5mm}Protocolo TCP/IP}
@@ -296,7 +300,7 @@
 
     \begin{itemize}
         \item TCP: Es el Protocolo de Control de Trasmisión que permite establecer una conexión y el intercambio de datos entre dos anfitriones. Este protocolo proporciona un transporte fiable de datos.
-        \item IP o protocolo de internet, utiliza direcciones series de cuatro octetos con formato de punto decimal (como por ejemplo 75.4.160.25). Este protocolo lleva los datos a otras máquinas de la red.
+        \item IP o protocolo de internet, utiliza direcciones series de cuatro octetos con formato de punto decimal (por ejemplo 75.4.160.25). Este protocolo lleva los datos a otras máquinas de la red.
     \end{itemize}
 
     El modelo TCP/IP permite un intercambio de datos fiable dentro de una red, definiendo los pasos a seguir desde que se envían los datos (en paquetes) hasta que son recibidos. Para lograrlo utiliza un sistema de capas con jerarquías (se construye una capa a continuación de la anterior) que se comunican únicamente con su capa superior (a la que envía resultados) y su capa inferior (a la que solicita servicios) \cite{tcp/ip}.
@@ -307,24 +311,13 @@
 
     \section{Obtención de niveles de salitre y condiciones para la aparición de xilófagos}
 
-    El nivel de salitre, como se muestra en la tabla, es obtenida mediante el análisis del nivel de humedad presente en los locales de la muestra.
+    El nivel de salitre, como se muestra en la tabla, es obtenido mediante el análisis del nivel de humedad presente en los locales de la muestra.
     
     ...
 
-    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos. Normalmente estos aparecen cuando la madera se encuentra con un porcentaje de humedad excesivo (por encima del 20 por ciento). Según \cite{monitoringMoisture} \cite{rodriguezcodigo} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55 por ciento mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50 por ciento. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 20 por ciento.\\
+    En el caso del control de la aparición de los xilófagos, como daño de origen biótico, se realiza el análisis de las condiciones óptimas para la aparición de los mismos. Normalmente estos aparecen cuando la madera se encuentra con un porcentaje de humedad excesivo (por encima del 20 por ciento). Según \cite{monitoringMoisture} y \cite{rodriguezcodigo} el porcentaje de humedad óptimo para que crezcan los xilófagos está entre el 25 y el 55 por ciento mientras que \cite{woodPreservation} plantea que, el rango de humedad idónea puede estar entre el 35 y el 50 por ciento. Tomando estos porcentajes de humedad idóneos para la aparición de los xilófagos, se establece como valor máximo de humedad un 20 por ciento.
 
     Valores de temperatura idóneos para la aparición de xilófagos...
-
-    \section{Condiciones medioambientales...} \label{sec: condiciones_medioambientales}
-
-
-    \begin{figure}[H]
-        \centering
-        \includegraphics[width=16cm, height=5cm]{imagenes/gráfica_comparativa_variables_medioambientales.png}
-        \caption{Correlación de valores medioambientales}
-        \subcaption*{Fuente: Elaboración propia}
-        \label{imag:grafica_condiciones_medioambientales}
-    \end{figure}
 
 
     %\section{Sistema de control de población}\label{sec: sistemaPoblacion}
