--- a/capitulos/introduccion.tex
+++ b/capitulos/introduccion.tex
@@ -23,7 +23,7 @@
     La temperatura, la humedad, el CO2, las vibraciones, el salitre, la iluminación, el polvo, entre otros, son factores que inciden directamente en el deterioro gradual de las obras que allí se encuentran. Con la aplicación del Internet de las Cosas en esta sala expositiva es posible reducir la incidencia de estos factores. La tecnología permitirá a los responsables del museo tener una visión más precisa y completa de lo que ocurre, brindando la posibilidad de evaluar en tiempo real el estado de cada área para la toma de decisiones ante alertas por eventos de deterioro.
     
     El análisis de la situación descrita permite identificar como \textbf{problema de la investigación} la inexistencia de un sistema de monitoreo de bajo consumo para el control en tiempo real del estado de conservación de las piezas pertenecientes a la Colección de Arte y Arqueología “Francisco Prat Puig” ubicada en la Oficina del Historiador de la provincia de Santiago de Cuba, imposibilitando la labor de conservación de los especialistas del centro y como
-    \textbf{objeto de la investigación} los sistemas de supervisión y monitoreo basado en IoT para la conservación de las piezas en la Colección de Arte y Arqueología “Francisco Prat Puig” teniendo en cuenta como \textbf{objetivo} diseñar e implementar de un sistema de arquitectura descentralizada basado en IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la muestra “Prat Puig”. Como \textbf{campo de acción} los sistemas de supervisión y monitoreo basados en IoT para la conservación de las piezas en los museos.
+    \textbf{objeto de la investigación} los sistemas de supervisión y monitoreo basados en IoT para la conservación de las piezas en la Colección de Arte y Arqueología “Francisco Prat Puig” teniendo en cuenta como \textbf{objetivo} diseñar e implementar un sistema de arquitectura descentralizada basado en IoT que permita la supervisión en tiempo real de las variables medioambientales existentes en la muestra “Prat Puig”. Como \textbf{campo de acción} los sistemas de supervisión y monitoreo basados en IoT para la conservación de las piezas en los museos.
 
     Se plantea como \textbf{hipótesis} (Después de terminar el informe)%que si logramos diseñar e implementar un sistema de supervisión de las piezas de arte en un museo, de tal manera que se muestren en tiempo real, el estado de conservación de los objetos, posibles afectaciones y los momentos más adecuados para efectuar una restauración en dicho local correspondiente a la muestra Prat Puig, estaríamos extendiendo la presencia de estas piezas y mejorando las condiciones de trabajo de los especialistas que allí laboran.\\
     
