--- a/tesis.tex
+++ b/tesis.tex
@@ -8,18 +8,17 @@
 \usepackage{amssymb}
 \usepackage{tocloft}
 \usepackage{setspace}
-\usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{enumerate} %enumeraciones
-\usepackage{apacite}
-% \usepackage{geometry}
+\usepackage{cite}
 \usepackage{float}
 \usepackage{anysize}
 \usepackage{wrapfig}
 \usepackage[T1]{fontenc}
 \usepackage[scaled]{uarial}
+\usepackage[numbers]{natbib}
 \renewcommand*\familydefault{\sfdefault}
 \renewcommand{\cftfigfont}{Figura}
 \renewcommand{\cfttabfont}{Tabla}
