9 de octubre 7:46pm

--- a/caratula.tex
+++ b/caratula.tex
@@ -9,5 +9,7 @@
 % \end{figure}
 
 \begin{center}
-    \textbf{Aquí va la carátula}
+    % \textbf{Aquí va la carátula}
+
+    \textbf{Miguel Ángel Zayas Barbán [Aut: 4to]}
 \end{center}
