--- a/tesis.tex
+++ b/tesis.tex
@@ -102,7 +102,7 @@
     \include{capitulos/bibliografia}
 
 %Apéndice
-    \include{capitulos/apendix}
+    % \include{capitulos/apendix}
     
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
